Edited wiki page AdminUserGuide through web user interface.

--- a/wiki/AdminUserGuide.wiki
+++ b/wiki/AdminUserGuide.wiki
@@ -15,21 +15,35 @@ _Tested Browsers :_
 _Prerequisites :_
   * An Alfresco instance running.
 
-_Deploy Steps :_
+*_Deploy Steps :_*
 
 1.Stop Alfresco Server.
 
 #Alfresco amp module installation
+
 2.Copy mdbc-2.0-SNAPSHOT.amp file to $ALF_ROOT/amps
 
 3.Remove directories :
+
 -$ALF_ROOT/tomcat/webapps/alfresco
+
 -$ALF_ROOT/tomcat/work/Catalina/localhost/alfresco
+
 -$ALF_ROOT/tomcat/work/Catalina/localhost/share
 
+
 4.Install the amp in alfresco war file with de command :
+
 {{{cd $ALF_ROOT
-sudo java -jar bin/alfresco-mmt.jar install amps/mdbc-2.0-SNAPSHOT.amp tomcat/webapps/alfresco.war}}} (note we use sudo because the installation path is /opt/alfresco-4.0.d and the command is launched for a non-root user)
+sudo java -jar bin/alfresco-mmt.jar install amps/mdbc-2.0-SNAPSHOT.amp tomcat/webapps/alfresco.war}}} 
+(note we use sudo because the installation path is /opt/alfresco-4.0.d and the command is launched for a non-root user)
+
+#Alfresco Share jar file
+
+5.Copy share-mdbc-component-0.1.jar to $ALF_ROOT/tomcat/webapps/share/WEB-INF/lib
+
+6.Start the Server.
+
 
 = Configuration and Extension =
 
