--- a/wiki/AdminUserGuide.wiki
+++ b/wiki/AdminUserGuide.wiki
@@ -15,37 +15,21 @@ _Tested Browsers :_
 _Prerequisites :_
   * An Alfresco instance running.
 
-*_Deploy Steps :_*
-
-1.Stop Alfresco Server.
-
-#Alfresco amp module installation
-
-2.Copy mdbc-2.0-SNAPSHOT.amp file to $ALF_ROOT/amps
-
-3.Remove directories :
-
--$ALF_ROOT/tomcat/webapps/alfresco
-
--$ALF_ROOT/tomcat/work/Catalina/localhost/alfresco
-
--$ALF_ROOT/tomcat/work/Catalina/localhost/share
-
-
-4.Install the amp in alfresco war file with the command :
-
-cd $ALF_ROOT
-
-sudo java -jar bin/alfresco-mmt.jar install amps/mdbc-2.0-SNAPSHOT.amp tomcat/webapps/alfresco.war
-
-(note we use sudo because the installation path is /opt/alfresco-4.0.d and the command is launched for a non-root user)
-
-#Alfresco Share jar file
-
-5.Copy share-mdbc-component-0.1.jar to $ALF_ROOT/tomcat/webapps/share/WEB-INF/lib
-
-6.Start the Server.
-
+*_Deploy Steps :_*<br><br>
+*1*.Stop Alfresco Server.<br><br>
+_#Alfresco amp module installation_<br>
+*2*.Copy mdbc-2.0-SNAPSHOT.amp file to $ALF_ROOT/amps<br>
+*3*.Remove directories :<br>
+-$ALF_ROOT/tomcat/webapps/alfresco<br>
+-$ALF_ROOT/tomcat/work/Catalina/localhost/alfresco<br>
+-$ALF_ROOT/tomcat/work/Catalina/localhost/share<br>
+*4*.Install the amp in alfresco war file with the command :<br>
+cd $ALF_ROOT<br>
+sudo java -jar bin/alfresco-mmt.jar install amps/mdbc-2.0-SNAPSHOT.amp tomcat/webapps/alfresco.war<br>
+(note we use sudo because the installation path is /opt/alfresco-4.0.d and the command is launched for a non-root user)<br><br>
+_#Alfresco Share jar file_<br>
+*5*.Copy share-mdbc-component-0.1.jar to $ALF_ROOT/tomcat/webapps/share/WEB-INF/lib<br>
+*6*.Start the Server.<br><br>
 
 = Configuration and Extension =
 
