--- a/wiki/AdminUserGuide.wiki
+++ b/wiki/AdminUserGuide.wiki
@@ -5,6 +5,7 @@ _Tested Server environment :_
   * Ubuntu Server 10.10 LTS 64bits.
   * Java(TM) SE Runtime Environment (build 1.6.0_26-b03).
   * *Alfresco Community 4.0.d*.
+  * MySQL 5.1.61-0ubuntu0.10.10.1 (for Alfresco and sample Connectors)
 
 _Tested Browsers :_
   * Chromium & Google Chrome 18.0.1025.151
@@ -32,6 +33,20 @@ _#Alfresco Share jar file_<br>
 *6*.Start the Server.<br><br>
 
 = Configuration and Extension =
+
+_Sample Default Configuration_<br>
+By default there are two connectors defined in AMP module :<br>
+-$ALF_ROOT/tomcat/webapps/alfresco/WEB-INF/classes/alfresco/module/mdbc/connectors/*customer-connector.xml*<br>
+-$ALF_ROOT/tomcat/webapps/alfresco/WEB-INF/classes/alfresco/module/mdbc/connectors/*country-connector.xml*<br>
+These connectors are configured for query a MySQL public database called "[http://dev.mysql.com/doc/sakila/en/sakila.html SakilaDB]".<br>
+To install the Sakila sample database go to [http://dev.mysql.com/doc/sakila/en/sakila.html#sakila-installation Installation] instructions (Win based) or use the following commands (Unix based) :<br>
+_You can download a copy of database schema and data from this project download section ([http://alfresco-metadbconnector.googlecode.com/files/sakila-db.zip SakilaDB])_<br>
+mysql -u root -p < path/to/sakila-schema.sql<br>
+(Enter root password)<br>
+mysql -u root -p < path/to/sakila-data.sql<br>
+(Enter root password)<br>
+*If there are no errors, the process is completed successfully.<br><br>
+NOTE : For use the MySQL jdbc driver on our MetaDBConnectors, customer or country for example, ensure that mysql-connector-java-5.?.?.jar file already exists in $ALF_ROOT/tomcat/lib folder.<br>
 
 Add your content here.  Format your content with:
   * Text in *bold* or _italic_
